<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calculator.ActivityVertical"
    android:background="#303030"

    >

    <Button
        android:id="@+id/button18"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="2dp"
        android:onClick="onClick"
        android:text="@string/clac_num1"
        android:textColor="#80cbc4"
        android:textColorHighlight="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button19"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_num2"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button18"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toTopOf="@+id/button18"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button20"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_num3"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toTopOf="@+id/button19"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button21"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_AC"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toTopOf="@+id/button20"
        app:rippleColor="#FFC107"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button22"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:onClick="onClick"
        android:text="@string/calc_num4"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button23"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_num5"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button22"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintStart_toEndOf="@+id/button22"
        app:layout_constraintTop_toTopOf="@+id/button22"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button24"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_num6"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button23"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintStart_toEndOf="@+id/button23"
        app:layout_constraintTop_toTopOf="@+id/button23"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button25"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_DEL"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toTopOf="@+id/button24"
        app:rippleColor="#FFC107"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button26"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:onClick="onClick"
        android:text="@string/calc_num7"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button22"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button27"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_num8"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button26"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintStart_toEndOf="@+id/button26"
        app:layout_constraintTop_toTopOf="@+id/button26"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button28"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_num9"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button27"
        app:layout_constraintEnd_toStartOf="@+id/button29"
        app:layout_constraintStart_toEndOf="@+id/button27"
        app:layout_constraintTop_toTopOf="@+id/button27"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button29"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_cheng"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button28"
        app:layout_constraintTop_toTopOf="@+id/button28"
        app:rippleColor="#FFC107"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button30"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:onClick="onClick"
        android:text="@string/calc_point"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button26"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button31"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_num0"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button30"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toTopOf="@+id/button30"
        app:rippleColor="#698c93"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button32"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:onClick="onClick"
        android:text="@string/calc_plus"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toTopOf="@+id/button31"
        app:rippleColor="#FFC107"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button33"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/calc_chu"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintBottom_toBottomOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toTopOf="@+id/button32"
        app:rippleColor="#FFC107"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button34"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClick"
        android:text="@string/calc_equal"
        android:textColor="#80cbc4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        app:layout_constraintEnd_toStartOf="@+id/button35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button31"
        app:rippleColor="#3F51B5"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button35"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:onClick="onClick"
        android:text="@string/calc_mius"
        android:textColor="#80cbc4"
        android:textStyle="bold"
        android:textColorHighlight="#80cbc4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button33"
        app:rippleColor="#FFC107"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/main_et_result"
        android:layout_width="362dp"
        android:layout_height="316dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/calc_textview_hint"
        android:textColor="#9B9CA1"
        android:textColorHighlight="#9B9CA1"
        android:textColorHint="#9B9CA1"
        android:textColorLink="#9B9CA1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>